Agregue link de bootstrap y java

--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -23,6 +23,9 @@
                 <a href="../index.html">Home</a>
             </li>
         </ul>
+    <main>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nemo ullam necessitatibus vel quo aliquam optio omnis sequi labore autem totam voluptates, perspiciatis non quas laboriosam cum. Animi, assumenda ea.
+    </main>
     </nav> 
 </body>
 </html>
