--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -5,27 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../main.css">
 </head>
 <body class="general">
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="../Pages/NuestrosProductos.html">Nuestros Productos</a>
+            <a class="nav-link active" href="../Pages/NuestrosProductos.html">Nuestros Productos</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/Mayorista.html">Mayorista</a>
+            <a class="nav-link active" href="../Pages/Mayorista.html">Mayorista</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
+            <a class="nav-link active" href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
-                <a href="../index.html">Home</a>
+            <a class="nav-link active" href="../index.html">Home</a>
             </li>
         </ul>
+    </nav>
     <main>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nemo ullam necessitatibus vel quo aliquam optio omnis sequi labore autem totam voluptates, perspiciatis non quas laboriosam cum. Animi, assumenda ea.
-    </main>
-    </nav> 
+        <h2 class="text-center">¿Quiénes Somos?</h2>
+<h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos deserunt nihil, animi rerum impedit earum? Reprehenderit quaerat consequuntur nam nesciunt, officia quia distinctio totam eos aliquam quis in labore vero?
+Alias facere doloribus culpa vero, in aspernatur! Illo, alias facilis? Nam, esse minus! Officiis, ipsum omnis fuga similique ipsam molestiae quis minima ut laborum quo illo, perferendis quaerat nam impedit? ipsum dolor sit amet consectetur adipisicing elit. Fuga nemo ullam necessitatibus vel quo aliquam optio omnis sequi labore autem totam voluptates, perspiciatis non quas laboriosam cum. Animi, assumenda ea.</h4>
+    </main> 
 </body>
 </html>
