--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 <nav>
     <ul>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/QuienesSomos.html">¿Quiénes Somos?</a>
+        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/QuienesSomos.html">¿Quiénes Somos?</a>
         </li>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/NuestrosProductos.html">Nuestros Productos</a>
+        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/NuestrosProductos.html">Nuestros Productos</a>
         </li>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/Mayorista.html">Mayorista</a>
+        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/Mayorista.html">Mayorista</a>
         </li>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/ProgramatuEnvio.html">Programá tu Envío</a>
+        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/ProgramatuEnvio.html">Programá tu Envío</a>
         </li>
     </ul>
 </nav> 
@@ -56,24 +56,40 @@
     <h2 class="main-p">Nuestros Destacados</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur dolores earum enim excepturi unde itaque quam dolor odio perferendis, placeat dolorum aut quos? Id neque culpa praesentium porro itaque hic.
     Dolor nam, asperiores natus, doloribus consectetur provident delectus temporibus molestiae a, quaerat corrupti. Eum accusantium reiciendis iusto, pariatur illo debitis veniam quaerat esse commodi, quia quae voluptate magnam incidunt harum. ipsum dolor sit, amet consectetur adipisicing elit. Minima architecto maxime excepturi voluptas? Maiores obcaecati, rerum ipsam dignissimos, dolor cum, alias ad ab asperiores quaerat fugit rem quia vero doloribus.</p>
-    <div class="main-imagen">
+    <div class="d-flex flex-wrap- align-items-center justify-center-around py-3">
+        <div class="container">
+            <div class="row">
+              <div class="col-3">
         <div class="main-mov">
-        <img src="../Entrega-Github/imgs/frutos secos.jpg" alt="Frutos secos" width="400">
-        <h2 class="main-p">Frutos secos</h2>
-        </div>
-        <div class="main-mov">
-            <img src="../Entrega-Github/imgs/miel.jpg" alt="miel" width="200">
-        <h2 class="main-p">Miel</h2>
-        </div>
-        <div class="main-mov">
-            <img src="../Entrega-Github/imgs/Verdura.jpg" alt="Verdura" width="400">
-        <h2 class="main-p">Verdura</h2>
-        </div>
-        <div class="main-mov">
-            <img src="../Entrega-Github/imgs/fruta.jpg" alt="Fruta" width="400">
-        <h2 class="main-p">Fruta</h2>
+        <img class="img-fluid" src="../Entrega-Github/imgs/frutos secos.jpg" alt="Frutos secos">
+        <h2>Frutos secos</h2>
         </div>
     </div>
+    <div class="col-3">
+        <div class="main-mov">
+            <img class="img-fluid" src="../Entrega-Github/imgs/miel.jpg" alt="miel">
+        <h2>Miel</h2>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="main-mov">
+            <img class="img-fluid" src="../Entrega-Github/imgs/Verdura.jpg" alt="Verdura">
+        <h2>Verdura</h2>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="main-mov">
+            <img img class="img-fluid"src="../Entrega-Github/imgs/fruta.jpg" alt="Fruta">
+        <h2>Fruta</h2>
+        </div>
+    </div>
+    <div class="col-3">
+    </div>
+</div>
+</div>
+</div>
+</div>
+
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
