agregue detalles en pagina nuestros productos

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
     <div class="col-3">
         <div class="main-mov">
-            <img class="img-fluid" src="../Entrega-Github/imgs/miel.jpg" alt="miel">
-        <h2>Miel</h2>
+            <img class="img-fluid" src="../Entrega-Github/imgs/miel.jpg" alt="miel" width="200">
+            <h2>Miel</h2>
         </div>
     </div>
     <div class="col-3">
@@ -85,7 +85,6 @@
     </div>
     <div class="col-3">
     </div>
-</div>
 </div>
 </div>
 </div>
