--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <input placeholder="¿Qué estás buscando?">
             <div class="home-imagen">
                 <div>
-                   <img src="../Entrega-Github/imgs/carrito.jpg" alt="carrito" width="50" hspace="50px">
+                   <img src="imgs/carrito.jpg" alt="carrito" width="50" hspace="50px">
                    <h3>Mi Carrito</h3>
                 </div>
                 <div>
-                  <img src="../Entrega-Github/imgs/micuenta.jpg" alt="micuenta" width="50">
+                  <img src="imgs/micuenta.jpg" alt="micuenta" width="50">
                   <h3>Mi Cuenta</h3>
                 </div>
             </div>
@@ -61,25 +61,25 @@
             <div class="row">
               <div class="col-3">
         <div class="main-mov">
-        <img class="img-fluid" src="../Entrega-Github/imgs/frutos secos.jpg" alt="Frutos secos">
+        <img class="img-fluid" src="../imgs/frutos secos.jpg" alt="Frutos secos">
         <h2>Frutos secos</h2>
         </div>
     </div>
     <div class="col-3">
         <div class="main-mov">
-            <img class="img-fluid" src="../Entrega-Github/imgs/miel.jpg" alt="miel" width="200">
+            <img class="img-fluid" src="../imgs/miel.jpg" alt="miel" width="200">
             <h2>Miel</h2>
         </div>
     </div>
     <div class="col-3">
         <div class="main-mov">
-            <img class="img-fluid" src="../Entrega-Github/imgs/Verdura.jpg" alt="Verdura">
+            <img class="img-fluid" src="../imgs/Verdura.jpg" alt="Verdura">
         <h2>Verdura</h2>
         </div>
     </div>
     <div class="col-3">
         <div class="main-mov">
-            <img img class="img-fluid"src="../Entrega-Github/imgs/fruta.jpg" alt="Fruta">
+            <img img class="img-fluid"src="../imgs/fruta.jpg" alt="Fruta">
         <h2>Fruta</h2>
         </div>
     </div>
