modifique ruta de las paginas

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 <nav>
     <ul>
         <li class="nav-mov">
-        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/QuienesSomos.html">¿Quiénes Somos?</a>
+        <a class="nav-link active" aria-current="page" href="../Pages/QuienesSomos.html">¿Quiénes Somos?</a>
         </li>
         <li class="nav-mov">
-        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/NuestrosProductos.html">Nuestros Productos</a>
+        <a class="nav-link active" aria-current="page" href="../Pages/NuestrosProductos.html">Nuestros Productos</a>
         </li>
         <li class="nav-mov">
-        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/Mayorista.html">Mayorista</a>
+        <a class="nav-link active" aria-current="page" href="../Pages/Mayorista.html">Mayorista</a>
         </li>
         <li class="nav-mov">
-        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/ProgramatuEnvio.html">Programá tu Envío</a>
+        <a class="nav-link active" aria-current="page" href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
         </li>
     </ul>
 </nav> 
