cambié las rutas

--- a/Pages/NuestrosProductos.html
+++ b/Pages/NuestrosProductos.html
@@ -12,13 +12,13 @@
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="Pages/QuienesSomos.html">¿Quiénes Somos?</a>
+            <a href="QuienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-mov">
-            <a href="Pages/Mayorista.html">Mayorista</a>
+            <a href="Mayorista.html">Mayorista</a>
             </li>
             <li class="nav-mov">
-            <a href="Pages/ProgramatuEnvio.html">Programá tu Envío</a>
+            <a href="ProgramatuEnvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
                 <a href="index.html">Home</a>
