--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <nav>
     <ul>
         <li class="nav-mov">
-        <a class="nav-link active" aria-current="page" href="QuienesSomos.html">¿Quiénes Somos?</a>
+        <a class="nav-link active" aria-current="page" href="../Entrega-Github/Pages/quienessomos.html">¿Quiénes Somos?</a>
         </li>
         <li class="nav-mov">
         <a class="nav-link active" aria-current="page" href="NuestrosProductos.html">Nuestros Productos</a>
@@ -62,13 +62,13 @@
             <div class="row">
               <div class="col-3">
         <div class="main-mov">
-        <img class="img-fluid" src="imgs/frutos secos.jpg" alt="Frutos secos">
+        <img class="img-fluid" src="imgs/frutossecos.jpg" alt="Frutos secos">
         <h2>Frutos secos</h2>
         </div>
     </div>
     <div class="col-3">
         <div class="main-mov">
-            <img class="img-fluid" src="imgs/miel.jpg" alt="miel" width="200">
+            <img class="img-fluid" src="imgs/miellacelina.jpg" alt="miel" width="200">
             <h2>Miel</h2>
         </div>
     </div>
