agregué contenido a las otras páginas

--- a/Pages/Mayorista.html
+++ b/Pages/Mayorista.html
@@ -5,24 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaCelina</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../main.css">
 </head>
 <body class="general">
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="../Pages/NuestrosProductos.html">Nuestros Productos</a>
+            <a href="../Pages/quienessomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/QuienesSomos.html">¿Quiénes Somos?</a>
+            <a href="../Pages/nuestroproductos.html">Nuestros Productos</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
+            <a href="../Pages/programatuenvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
                 <a href="../index.html">Home</a>
             </li>
         </ul>
-    </nav> 
+        </nav>
+        <main>
+            <h1 class="text-center">Nuestros Productos </h1>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Frutas</a></li>
+                  <li><a class="dropdown-item" href="#">Verduras</a></li>
+                  <li><a class="dropdown-item" href="#">Frutos Secos</a></li>
+                  <li><a class="dropdown-item" href="#">Miel</a></li>
+                </ul>
+              </div>
+        <div class="d-flex flex-wrap- align-items-center justify-center-around py-3">
+            <div class="container">
+                <div class="row">
+                <div class="col-4">
+                <div class="main-mov">
+                <img class="img-fluid" src="../imgs/arandanos.jpg" alt="Arandanos">
+                <h2>1 Kilo: $200</h2>
+                <h3>Minimo 10 kilos </h3>
+                </div>
+                </div> 
+                <div class= "col-4">
+                <div class="main-mov">
+                <img class="img-fluid" src="../imgs/ciruelas.jpg" alt="Ciruelas">
+                <h2>1 Kilo: $200</h2>
+                <h3>Minimo 10 kilos </h3>
+                </div>
+                </div>
+                <div class= "col-4">
+                <div class="main-mov">
+                <img class="img-fluid" src="../imgs/durazno.jpg" alt="durazno">
+                <h2>1 kilo: $200</h2>
+                <h3>Minimo 10 kilos </h3>
+                </div>
+                </div>
+                <div class= "col-4">
+                 <div class="main-mov">
+                <img img class="img-fluid" src="../imgs/frutillas.jpg" alt="frutillas">
+                <h2>1 kilo: $300</h2>
+                <h3>Minimo 10 kilos </h3>
+                </div>
+                </div>
+                <div class= "col-4">
+                <div class="main-mov">
+            <img class="img-fluid" src="../imgs/Manzanas.jpg" alt="Manzanas">
+            <h2>1 Kilo: $200</h2>
+            <h3>Minimo 10 kilos </h3>
+            </div>
+        </div>
+        <div class= "col-4">
+            <div class="main-mov">
+                <img class="img-fluid" src="../imgs/moras.jpg" alt="moras">
+                <h2>1 Kilo: $200</h2>
+                <h3>Minimo 10 kilos </h3>
+            </div>
+        </div>
+        <div class= "col-4">
+            <div class="main-mov">
+                <img class="img-fluid" src="../imgs/Peras.jpg" alt="peras">
+            <h2>1 kilo: $200</h2>
+            <h3>Minimo 10 kilos </h3>
+            </div>
+        </div>
+        <div class= "col-4">
+            <div class="main-mov">
+                <img img class="img-fluid" src="../imgs/sandi.jpg" alt="sandias">
+            <h2>1 kilo: $300</h2>
+            <h3>Minimo 10 kilos </h3>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+</main> 
 </body>
 </html>
