--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>QuienesSomos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../main.css">
 </head>
@@ -25,10 +25,13 @@
             </li>
         </ul>
     </nav>
-    <main>
-        <h2 class="text-center">¿Quiénes Somos?</h2>
-<h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos deserunt nihil, animi rerum impedit earum? Reprehenderit quaerat consequuntur nam nesciunt, officia quia distinctio totam eos aliquam quis in labore vero?
-Alias facere doloribus culpa vero, in aspernatur! Illo, alias facilis? Nam, esse minus! Officiis, ipsum omnis fuga similique ipsam molestiae quis minima ut laborum quo illo, perferendis quaerat nam impedit? ipsum dolor sit amet consectetur adipisicing elit. Fuga nemo ullam necessitatibus vel quo aliquam optio omnis sequi labore autem totam voluptates, perspiciatis non quas laboriosam cum. Animi, assumenda ea.</h4>
+    <main class="quienesomos">
+        <div class="text-center">
+        <h2 >¿Quiénes Somos?</h2>
+        <img src="../imgs/manos.jpg" class="rounded mx-auto d-block" alt="fruta">
+<p></p>
+<h4>Somos una familia que se crió en el campo y luego se fue a vivir a una de las principales ciudades de Argenina. Nuestros recuerdos en el aire libre siempre fueron muy valores y la tarea de ir a la huerta en busca de nuestras comidas diarias era nuestra preferida. Supimos crecer valorando los alimentos frescos, recién cocechados con gusto natural. Queremos que esa satisfacción sea compartida con toda nuestra comunidad y es por eso que nos enfocamos en brindar productos de primera calidad. Les agradecemos por confiar en nosotros y apostar a una vida saludable sin la invasión de químicos</h4>
+</div>
     </main> 
 </body>
 </html>
