--- a/Pages/nuestroproductos.html
+++ b/Pages/nuestroproductos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaCelina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body class="general">
     <nav>
@@ -27,8 +27,6 @@
         </nav>
         <main>
             <h1 class="text-center">Nuestros Productos </h1>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aspernatur ab adipisci deleniti fugit nemo cum laborum alias dolore nobis voluptatibus veniam, culpa repellat facilis autem ipsam vero! Temporibus, placeat.
-            Dolorum mollitia, aut beatae maxime ad id fugiat ipsam sequi non. Corporis quo cupiditate similique enim culpa deserunt saepe at reiciendis vero accusamus provident expedita delectus, sequi ab perferendis dignissimos.</h3>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown button
@@ -45,49 +43,49 @@
                 <div class="row">
                 <div class="col-4">
                 <div class="main-mov">
-                <img class="img-fluid" src="imgs/arandanos.jpg" alt="Arandanos">
+                <img class="img-fluid" src="../imgs/arandanos.jpg" alt="Arandanos">
                 <h2>1 Kilo: $300</h2>
                 </div>
                 </div> 
                 <div class= "col-4">
                 <div class="main-mov">
-                <img class="img-fluid" src="imgs/ciruelas.jpg" alt="Ciruelas">
+                <img class="img-fluid" src="../imgs/ciruelas.jpg" alt="Ciruelas">
                 <h2>1 Kilo: $250</h2>
                 </div>
                 </div>
                 <div class= "col-4">
                 <div class="main-mov">
-                <img class="img-fluid" src="imgs/durazno.jpg" alt="durazno">
+                <img class="img-fluid" src="../imgs/durazno.jpg" alt="durazno">
                 <h2>1 kilo: $300</h2>
                 </div>
                 </div>
                 <div class= "col-4">
                  <div class="main-mov">
-                <img img class="img-fluid" src="imgs/frutillas.jpg" alt="frutillas">
+                <img img class="img-fluid" src="../imgs/frutillas.jpg" alt="frutillas">
                 <h2>1 kilo: 400</h2>
                 </div>
                 </div>
                 <div class= "col-4">
                 <div class="main-mov">
-            <img class="img-fluid" src="imgs/Manzanas.jpg" alt="Manzanas">
+            <img class="img-fluid" src="../imgs/Manzanas.jpg" alt="Manzanas">
             <h2>1 Kilo: $250</h2>
             </div>
         </div>
         <div class= "col-4">
             <div class="main-mov">
-                <img class="img-fluid" src="imgs/moras.jpg" alt="moras">
+                <img class="img-fluid" src="../imgs/moras.jpg" alt="moras">
                 <h2>1 Kilo: $250</h2>
             </div>
         </div>
         <div class= "col-4">
             <div class="main-mov">
-                <img class="img-fluid" src="imgs/Peras.jpg" alt="peras">
+                <img class="img-fluid" src="../imgs/Peras.jpg" alt="peras">
             <h2>1 kilo: $300</h2>
             </div>
         </div>
         <div class= "col-4">
             <div class="main-mov">
-                <img img class="img-fluid" src="imgs/sandi.jpg" alt="sandias">
+                <img img class="img-fluid" src="../imgs/sandi.jpg" alt="sandias">
             <h2>1 kilo: $400</h2>
             </div>
         </div>
