--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../Entrega-Github/imgs/miellacelina.jpg" class= "d-block w-100" alt="Miel">
+            <img src="imgs/miellacelina.jpg" class= "d-block w-100" alt="Miel">
           </div>
           <div class="carousel-item">
-            <img src="../Entrega-Github/imgs/fruta.jpg" class="d-block w-100" alt="fruta">
+            <img src="imgs/fruta.jpg" class="d-block w-100" alt="fruta">
           </div>
           <div class="carousel-item">
-            <img src="../Entrega-Github/imgs/Verdura.jpg" class="d-block w-100" alt="Verdura">
+            <img src="imgs/Verdura.jpg" class="d-block w-100" alt="Verdura">
           </div>
           <div class="carousel-item">
-            <img src="../Entrega-Github/imgs/frutossecos.jpg" class="d-block w-100" alt="frutos">
+            <img src="imgs/frutossecos.jpg" class="d-block w-100" alt="frutos">
           </div>
         </div>
         </div>
