--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 <nav>
     <ul>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/quienessomos.html">¿Quiénes Somos?</a>
+        <a href="./Pages/quienessomos.html">¿Quiénes Somos?</a>
         </li>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/nuestroproductos.html">Nuestros Productos</a>
+        <a href="./Pages/nuestroproductos.html">Nuestros Productos</a>
         </li>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/mayorista.html">Mayorista</a>
+        <a href="./Pages/mayorista.html">Mayorista</a>
         </li>
         <li class="nav-mov">
-        <a href="../Entrega-Github/Pages/programatuenvio.html">Programá tu Envío</a>
+        <a href="./Pages/programatuenvio.html">Programá tu Envío</a>
         </li>
     </ul>
 </nav> 
