--- a/Pages/nuestroproductos.html
+++ b/Pages/nuestroproductos.html
@@ -126,5 +126,22 @@
     </div>
     </div>
 </main> 
+  <!--Inicio footer-->
+
+  <footer class="footer mb-5">
+
+    <a href="#"> <img src="./media/flechablanca.png" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
+
+
+    <h5 class="text-center text-light fw-bold"> SEGUINOS  </h5>
+
+    <section class="text-center">
+        <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="./media/logoinsta.png" alt="fotologoinstagram" width="30px"></a>
+        <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="./media/logofb.png" alt="fotologofacebook" width="30xpx"></a>
+    </section>
+
+</footer>
+
+<!--Fin footer-->
 </body>
 </html>
