--- a/index.html
+++ b/index.html
@@ -93,5 +93,22 @@
 
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <!--Inicio footer-->
+
+  <footer class="footer mb-5">
+
+    <a href="#"> <img src="./imgs/flecha.jpg" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
+
+
+    <h5 class="text-center text-light fw-bold _blank"> SEGUINOS  </h5>
+
+    <section class="text-center">
+        <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="./imgs/instagram.jpg" alt="fotologoinstagram" width="30px"></a>
+        <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="./imgs/facebook.jpg" alt="fotologofacebook" width="30xpx"></a>
+    </section>
+
+</footer>
+
+<!--Fin footer-->
 </body>
 </html>
