--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -65,5 +65,22 @@
 <h4>Somos una familia que se crió en el campo y luego se fue a vivir a una de las principales ciudades de Argenina. Nuestros recuerdos en el aire libre siempre fueron muy valores y la tarea de ir a la huerta en busca de nuestras comidas diarias era nuestra preferida. Supimos crecer valorando los alimentos frescos, recién cocechados con gusto natural. Queremos que esa satisfacción sea compartida con toda nuestra comunidad y es por eso que nos enfocamos en brindar productos de primera calidad. Les agradecemos por confiar en nosotros y apostar a una vida saludable sin la invasión de químicos</h4>
 </div>
     </main> 
+      <!--Inicio footer-->
+
+      <footer class="footer mb-5">
+
+        <a href="#"> <img src="./media/flechablanca.png" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
+  
+
+        <h5 class="text-center text-light fw-bold"> SEGUINOS  </h5>
+
+        <section class="text-center">
+            <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="./media/logoinsta.png" alt="fotologoinstagram" width="30px"></a>
+            <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="./media/logofb.png" alt="fotologofacebook" width="30xpx"></a>
+        </section>
+
+    </footer>
+
+    <!--Fin footer-->
 </body>
 </html>
