realicé modificaciones esteticas

--- a/Pages/ProgramatuEnvio.html
+++ b/Pages/ProgramatuEnvio.html
@@ -148,22 +148,22 @@
         </tbody>
         </table>
     </main>
-      <!--Inicio footer-->
+       <!--Inicio footer-->
 
-      <footer class="footer mb-5">
+  <footer>
 
-        <a href="#"> <img src="./media/flechablanca.png" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
-  
+    <a href="#"> <img src="../imgs/flecha.jpg" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
 
-        <h5 class="text-center text-light fw-bold"> SEGUINOS  </h5>
 
-        <section class="text-center">
-            <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="./media/logoinsta.png" alt="fotologoinstagram" width="30px"></a>
-            <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="./media/logofb.png" alt="fotologofacebook" width="30xpx"></a>
-        </section>
+    <h5 class="text-center fw-bold"> SEGUINOS  </h5>
 
-    </footer>
+    <section class="text-center">
+        <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="../imgs/instagram.jpg" alt="fotologoinstagram" width="30px"></a>
+        <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="../imgs/facebook.jpg" alt="fotologofacebook" width="30xpx"></a>
+    </section>
 
-    <!--Fin footer-->
+</footer>
+
+<!--Fin footer-->
 </body>
 </html>
