--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <!--Inicio footer-->
 
-  <footer class="footer mb-5">
+  <footer>
 
     <a href="#"> <img src="./imgs/flecha.jpg" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
 
 
-    <h5 class="text-center text-light fw-bold _blank"> SEGUINOS  </h5>
+    <h5 class="text-center fw-bold"> SEGUINOS  </h5>
 
     <section class="text-center">
         <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="./imgs/instagram.jpg" alt="fotologoinstagram" width="30px"></a>
