--- a/Pages/Mayorista.html
+++ b/Pages/Mayorista.html
@@ -57,7 +57,7 @@
         </ul>
         </nav>
         <main>
-            <h1 class="text-center">Nuestros Productos </h1>
+            <h1 class="text-center">Mínimo 10 kilos por producto </h1>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown button
@@ -133,24 +133,24 @@
     </div>
     </div>
 </main> 
-  <!--Inicio footer-->
 
-  <footer class="footer mb-5">
+ <!--Inicio footer-->
 
-    <a href="#"> <img src="./media/flechablanca.png" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
+ <footer>
+
+    <a href="#"> <img src="../imgs/flecha.jpg" alt="flechaarriba" width="70px" class="flechaarriba"> </a>
 
 
-    <h5 class="text-center text-light fw-bold"> SEGUINOS  </h5>
+    <h5 class="text-center fw-bold"> SEGUINOS  </h5>
 
     <section class="text-center">
-        <a href="https://www.instagram.com/master.speakers/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-          </svg> alt="fotologoinstagram" width="30px"></a>
-        <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="./media/logofb.png" alt="fotologofacebook" width="30xpx"></a>
+        <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src=".,/imgs/instagram.jpg" alt="fotologoinstagram" width="30px"></a>
+        <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src=".,/imgs/facebook.jpg" alt="fotologofacebook" width="30xpx"></a>
     </section>
 
 </footer>
 
 <!--Fin footer-->
+
 </body>
 </html>
