--- a/Pages/Mayorista.html
+++ b/Pages/Mayorista.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaCelina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/estilocss.css">
 </head>
 <body class="general">
     <header>
@@ -57,7 +57,7 @@
         </ul>
         </nav>
         <main>
-            <h1 class="text-center">Mínimo 10 kilos por producto </h1>
+            <h1 class="main-p">Mínimo 10 kilos por producto </h1>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown button
