--- a/Pages/ProgramatuEnvio.html
+++ b/Pages/ProgramatuEnvio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaCelina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/estilocss.css">
 </head>
 <body class="general">
   <header>
@@ -43,13 +43,13 @@
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="../Pages/QuienesSomos.html">¿Quiénes Somos?</a>
+            <a href="../Pages/quienessomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/Mayorista.html">Mayorista</a>
+            <a href="../Pages/mayorista.html">Mayorista</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/NuestrosProductos.html">Nuestros Productos</a>
+            <a href="../Pages/nuestroproductos.html">Nuestros Productos</a>
             </li>
             <li class="nav-mov">
                 <a href="../index.html">Home</a>
@@ -57,7 +57,7 @@
         </ul>
     </nav>
     <main>
-        <h2 class="text-center" > Programá tu Envío</h2>
+        <h2 class="main-p"> Programá tu Envío</h2>
         <p></p>
         <form class="row g-3">
             <div class="col-md-6">
