--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuienesSomos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/estilocss.css">
 </head>
 <body class="general">
     <header>
@@ -59,10 +59,10 @@
     </nav>
     <main class="quienesomos">
         <div class="text-center">
-        <h2 >¿Quiénes Somos?</h2>
+        <h2 class="main-p">¿Quiénes Somos?</h2>
         <img src="../imgs/manos.jpg" class="rounded mx-auto d-block" alt="fruta">
 <p></p>
-<h4>Somos una familia que se crió en el campo y luego se fue a vivir a una de las principales ciudades de Argenina. Nuestros recuerdos en el aire libre siempre fueron muy valores y la tarea de ir a la huerta en busca de nuestras comidas diarias era nuestra preferida. Supimos crecer valorando los alimentos frescos, recién cocechados con gusto natural. Queremos que esa satisfacción sea compartida con toda nuestra comunidad y es por eso que nos enfocamos en brindar productos de primera calidad. Les agradecemos por confiar en nosotros y apostar a una vida saludable sin la invasión de químicos</h4>
+<h4>Somos una familia que se crió en el campo y luego se fue a vivir a una de las principales ciudades de Argentina. Nuestros recuerdos en el aire libre siempre fueron muy valores y la tarea de ir a la huerta en busca de nuestras comidas diarias era nuestra preferida. Supimos crecer valorando los alimentos frescos, recién cocechados con sabor natural. Queremos que esa satisfacción sea compartida con toda nuestra comunidad y es por eso que nos enfocamos en brindar productos de primera calidad. Les agradecemos por confiar en nosotros y apostar a una vida saludable sin la invasión de químicos</h4>
 </div>
     </main> 
    <!--Inicio footer-->
