--- a/Pages/nuestroproductos.html
+++ b/Pages/nuestroproductos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaCelina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../css/estilocss.css">
 </head>
 <body class="general">
     <header>
@@ -44,21 +44,21 @@
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="QuienesSomos.html">¿Quiénes Somos?</a>
+            <a href="../Pages/quienessomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-mov">
-            <a href="Mayorista.html">Mayorista</a>
+            <a href="../Pages/mayorista.html">Mayorista</a>
             </li>
             <li class="nav-mov">
-            <a href="ProgramatuEnvio.html">Programá tu Envío</a>
+            <a href="../Pages/programatuenvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
             </li>
         </ul>
         </nav>
         <main>
-            <h1 class="text-center">Nuestros Productos </h1>
+            <h1 class="main-p">Nuestros Productos </h1>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown button
