--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="keywords" content=" Productos orgánicos, La Celina, Frutas, Verduras, Frutos Secos"> 
     <title>La Celina</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./css/estilocss.css">
 </head>
-<body class="general">
 <header>
         <div class="home-intro">
             <ul>
@@ -41,13 +40,15 @@
            </div>
         </div>     
 </header>
-<nav>
+<body class="general">
+  <!--Inicio Nav-->
+  <nav>
     <ul>
         <li class="nav-mov">
         <a href="./Pages/quienessomos.html">¿Quiénes Somos?</a>
         </li>
         <li class="nav-mov">
-        <a href="./Pages/nuestroproductos.html">Nuestros Productos</a>
+          <a href="./Pages/nuestroproductos.html">Nuestros productos</a>
         </li>
         <li class="nav-mov">
         <a href="./Pages/mayorista.html">Mayorista</a>
@@ -56,8 +57,10 @@
         <a href="./Pages/programatuenvio.html">Programá tu Envío</a>
         </li>
     </ul>
-</nav> 
+    </nav>
+    <!--Fin Nav-->
 <main>
+  <!--Inicio Main Slider Carrousel-->
     <h2 class="main-p">Nuestros Destacados</h2>
     <h4 class="text-center">Nuestros productos se destacan por ser 100% orgánicos y por ende tener un alto valor nutricional, debido a su gran contenido de vitaminas y minerales, casi siempre mayor al de productos procesados con químicos. Nos enfocamos en brindar productos de estación frescos, listos para ser consumidos .</h4>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -90,7 +93,26 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+       <!--Fin Main Slider Carrousel-->
+      <p></p>
+      <!--Inicio Protagonistas-->
+      <h2 class="main-p">Ellos ya nos eligieron</h2>
+      <p></p>
+      <div class="influencers">
+      <div>
+        <img src="imgs/ginobilli.jpg" alt="Manu">
+        <h5 class="texto">"Nunca puede faltar mis productos de La Celina en mi bolso", @MANUGINOBILI </h5>
+      </div>
+      <div>
+        <img src="imgs/luciana.jpg" alt="luciana">
+        <h5 class="texto">"La Celina tiene todo para mantener mi energía bien arriba", @LUAYMAR</h5>
+      </div>
+      <div>
+        <img src="imgs/mascherano.jpg" alt="Masche">
+        <h5 class="texto">"Me ayuda a seguir ejercitandome como siempre, @MASCHERANO</h5>
+      </div>
+    </div>
+<!--Fin Protagonistas-->
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <!--Inicio footer-->
@@ -106,7 +128,18 @@
         <a href="https://www.instagram.com/master.speakers/" target="_blank"><img src="./imgs/instagram.jpg" alt="fotologoinstagram" width="30px"></a>
         <a href="https://www.facebook.com/speaker.master.3/" target="_blank"> <img src="./imgs/facebook.jpg" alt="fotologofacebook" width="30xpx"></a>
     </section>
-
+    <p></p>
+    <h5 class="text-center fw-bold"> CONTACTANOS </h5>
+    <section class="text-center">
+      <div>
+        <img src="./imgs/whatsapp.jpg" alt="fotologowhatsapp" width="30px"></a>
+        <h6>+541133713983</h6>
+      </div>
+      <div>
+       <img src="./imgs/mail.jpg" alt="fotologomail" width="30xpx"></a>
+       <h6>productoslacelina@gmail.com</h6>
+      </div>
+    </section>
 </footer>
 
 <!--Fin footer-->
