--- a/Pages/Mayorista.html
+++ b/Pages/Mayorista.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!--Palabras claves-->
     <meta name="keywords" content=" Productos orgánicos, La Celina, Frutas, Verduras, Frutos Secos">
-    <title>LaCelina</title>
+     <!--Title-->
+    <title>LaCelina - Mayoristas</title>
+    <!--Description-->
+    <meta name="description" content="Queremos llegar a todos los sectores del país por eso también realizamos ventas mayoristas">
+    <!--Favicon-->
+    <link rel="icon" href="../imgs/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilocss.css">
 </head>
