--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Palabras claves SEO-->
     <meta name="keywords" content=" Productos orgánicos, La Celina, Frutas, Verduras, Frutos Secos">
-    <title>QuienesSomos</title>
+     <!--Title-->
+    <title>LaCelina - QuienesSomos</title>
+    <!--Description-->
+    <meta name="description" content="Somos una familia especializada en brindar productos de calidad y un servicio único">
+    <!--Favicon-->
+    <link rel="icon" href="../imgs/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilocss.css">
 </head>
