--- a/Pages/nuestroproductos.html
+++ b/Pages/nuestroproductos.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LaCelina</title>
+    <!--Title-->
+    <title>LaCelina - Nuestros Productos</title>
+     <!--Palabras claves SEO-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Description-->
+    <meta name="description" content="Producimos productos 100% orgánicos, enfocados en satisfacer las necesidades de nuestros clientes">
+    <!--Favicon-->
+    <link rel="icon" href="../imgs/favicon.png">
+    <!--Link a mi css-->
     <link rel="stylesheet" href="../css/estilocss.css">
 </head>
 <body class="general">
