--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Palabras claves SEO-->
     <meta name="keywords" content=" Productos orgánicos, La Celina, Frutas, Verduras, Frutos Secos"> 
-    <title>La Celina</title>
+    <!--Title-->
+    <title>La Celina - Home</title>
+    <!--Description-->
+    <meta name="description" content="Producimos productos 100% orgánicos, enfocados en satisfacer las necesidades de nuestros clientes">
+    <!--Favicon-->
+    <link rel="icon" href="./imgs/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Link a mi css-->
     <link rel="stylesheet" href="./css/estilocss.css">
 </head>
 <header>
