modifiqué nombre de las rutas

--- a/Pages/Mayorista.html
+++ b/Pages/Mayorista.html
@@ -50,13 +50,13 @@
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="../Pages/quienessomos.html">¿Quiénes Somos?</a>
+            <a href="../Pages/QuienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-mov">
             <a href="../Pages/nuestroproductos.html">Nuestros Productos</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/programatuenvio.html">Programá tu Envío</a>
+            <a href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
                 <a href="../index.html">Home</a>
