--- a/Pages/QuienesSomos.html
+++ b/Pages/QuienesSomos.html
@@ -54,10 +54,10 @@
             <a class="nav-link active" href="../Pages/nuestroproductos.html">Nuestros Productos</a>
             </li>
             <li class="nav-mov">
-            <a class="nav-link active" href="../Pages/mayorista.html">Mayorista</a>
+            <a class="nav-link active" href="../Pages/Mayorista.html">Mayorista</a>
             </li>
             <li class="nav-mov">
-            <a class="nav-link active" href="../Pages/programatuenvio.html">Programá tu Envío</a>
+            <a class="nav-link active" href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
             <a class="nav-link active" href="../index.html">Home</a>
