--- a/Pages/nuestroproductos.html
+++ b/Pages/nuestroproductos.html
@@ -51,13 +51,13 @@
     <nav>
         <ul>
             <li class="nav-mov">
-            <a href="../Pages/quienessomos.html">¿Quiénes Somos?</a>
+            <a href="../Pages/QuienesSomos.html">¿Quiénes Somos?</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/mayorista.html">Mayorista</a>
+            <a href="../Pages/Mayorista.html">Mayorista</a>
             </li>
             <li class="nav-mov">
-            <a href="../Pages/programatuenvio.html">Programá tu Envío</a>
+            <a href="../Pages/ProgramatuEnvio.html">Programá tu Envío</a>
             </li>
             <li class="nav-mov">
                 <a href="../index.html">Home</a>
