--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
   <nav>
     <ul>
         <li class="nav-mov">
-        <a href="./Pages/quienessomos.html">¿Quiénes Somos?</a>
+        <a href="./Pages/QuienesSomos.html">¿Quiénes Somos?</a>
         </li>
         <li class="nav-mov">
           <a href="./Pages/nuestroproductos.html">Nuestros productos</a>
         </li>
         <li class="nav-mov">
-        <a href="./Pages/mayorista.html">Mayorista</a>
+        <a href="./Pages/Mayorista.html">Mayorista</a>
         </li>
         <li class="nav-mov">
-        <a href="./Pages/programatuenvio.html">Programá tu Envío</a>
+        <a href="./Pages/ProgramatuEnvio.html">Programá tu Envío</a>
         </li>
     </ul>
     </nav>
