--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!--Link a mi css-->
     <link rel="stylesheet" href="./css/estilocss.css">
 </head>
+<body class="general">
 <header>
         <div class="home-intro">
             <ul>
@@ -47,7 +48,6 @@
            </div>
         </div>     
 </header>
-<body class="general">
   <!--Inicio Nav-->
   <nav>
     <ul>
@@ -106,17 +106,26 @@
       <h2 class="main-p">Ellos ya nos eligieron</h2>
       <p></p>
       <div class="influencers">
-      <div>
+      <div class="card">
         <img src="imgs/ginobilli.jpg" alt="Manu">
-        <h5 class="texto">"Nunca puede faltar mis productos de La Celina en mi bolso", @MANUGINOBILI </h5>
+        <div class="container">
+          <h4><b>@MANUGINOBILI</b></h4>
+          <p>"Nunca puede faltar mis productos de La Celina en mi bolso"</p>
+        </div>
       </div>
-      <div>
-        <img src="imgs/luciana.jpg" alt="luciana">
-        <h5 class="texto">"La Celina tiene todo para mantener mi energía bien arriba", @LUAYMAR</h5>
+      <div class="card">
+        <img src="imgs/mascherano.jpg" alt="mascherano">
+        <div class="container">
+          <h4><b>@MASCHERANO</b></h4>
+          <p>"Me ayuda a seguir ejercitandome como siempre"</p>
+        </div>
       </div>
-      <div>
-        <img src="imgs/mascherano.jpg" alt="Masche">
-        <h5 class="texto">"Me ayuda a seguir ejercitandome como siempre, @MASCHERANO</h5>
+      <div class="card">
+        <img src="imgs/luciana.jpg" alt="Avatar">
+        <div class="container">
+          <h4><b>@LUAYMAR</b></h4>
+          <p>">"La Celina tiene todo para mantener mi energía bien arriba"</p>
+        </div>
       </div>
     </div>
 <!--Fin Protagonistas-->
